--- a/src/epub/text/buttercup-day.xhtml
+++ b/src/epub/text/buttercup-day.xhtml
@@ -87,14 +87,14 @@
 			<p>The door opened, and our visitor entered. He was a rather small size in curates, with an engaging, ingenuous face, adorned with a pair of pince-nez. He wore a paper buttercup in his coat; and, directly he began to speak, revealed himself as the possessor of a peculiar stammer.</p>
 			<p>“Pup-pup-pup⁠—” he said.</p>
 			<p>“Eh?” said Ukridge.</p>
-			<p>“<abbr>Mr.</abbr> pup-pup-pup Ukridge?”</p>
-			<p>“Yes. This is my friend, <abbr>Mr.</abbr> Corcoran.”</p>
+			<p>“<abbr epub:type="z3998:name-title">Mr.</abbr> pup-pup-pup Ukridge?”</p>
+			<p>“Yes. This is my friend, <abbr epub:type="z3998:name-title">Mr.</abbr> Corcoran.”</p>
 			<p>I bowed. The curate bowed.</p>
 			<p>“Take a seat,” urged Ukridge, hospitably. “You’ll have a drink?”</p>
 			<p>The visitor raised a deprecatory hand.</p>
 			<p>“No, thank you,” he replied. “I find it more beneficial to my health to abstain entirely from alcoholic liquids. At the University I was a moderate drinker, but since I came down I have found it better to pup-pup-pup completely. But pray do not let me stop you. I am no bigot.”</p>
 			<p>He beamed for an instant in friendly fashion; then there came into his face a look of gravity. Here was a man, one perceived, who had something on his mind.</p>
-			<p>“I came here, <abbr>Mr.</abbr> Ukridge,” he said, “on a pup-pup-pup-pup-pup⁠—”</p>
+			<p>“I came here, <abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge,” he said, “on a pup-pup-pup-pup-pup⁠—”</p>
 			<p>“Parish matter?” I hazarded, to help him out.</p>
 			<p>He shook his head.</p>
 			<p>“No, a pup-pup-pup⁠—”</p>
@@ -110,9 +110,9 @@
 			<p>“Exactly,” said the curate.</p>
 			<p>“But, dash it, laddie,” protested Ukridge, now abreast of the situation, “it’s no good complaining of anything that happens at a charity bazaar. You know as well as I do that, when the members of a Temperance League get together and start selling things at stalls, anything goes except gouging and biting. The only thing to do is to be light on your feet and keep away.”</p>
 			<p>The curate shook his head sadly.</p>
-			<p>“I have no complaint to make concerning the manner in which the stalls are being conducted, <abbr>Mr.</abbr> pup-pup-pup. It is only to be expected that at a bazaar in aid of a deserving cause the prices of the various articles on sale will be in excess of those charged in the ordinary marts of trade. But deliberate and calculated swindling is another matter.”</p>
+			<p>“I have no complaint to make concerning the manner in which the stalls are being conducted, <abbr epub:type="z3998:name-title">Mr.</abbr> pup-pup-pup. It is only to be expected that at a bazaar in aid of a deserving cause the prices of the various articles on sale will be in excess of those charged in the ordinary marts of trade. But deliberate and calculated swindling is another matter.”</p>
 			<p>“Swindling?”</p>
-			<p>“There is a young woman in the grounds extorting money from the public on the plea that it is Buttercup Day. And here is the point, <abbr>Mr.</abbr> Ukridge. Buttercup Day is the flag-day of the National Orthopaedic Institute, and is not to take place for some weeks. This young person is deliberately cheating the public.”</p>
+			<p>“There is a young woman in the grounds extorting money from the public on the plea that it is Buttercup Day. And here is the point, <abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge. Buttercup Day is the flag-day of the National Orthopaedic Institute, and is not to take place for some weeks. This young person is deliberately cheating the public.”</p>
 			<p>Ukridge licked his lips, with a hunted expression.</p>
 			<p>“Probably a local institution of the same name,” I suggested.</p>
 			<p>“That’s it,” said Ukridge gratefully. “Just what I was going to say myself. Probably a local institution. Fresh Air Fund for the poor of the neighbourhood, I shouldn’t wonder. I believe I’ve heard them talk about it, now I come to think.”</p>
@@ -131,7 +131,7 @@
 			<p>“Oh⁠—ah⁠—er!” I said.</p>
 			<p>There are certain people in this world in whose presence certain other people can never feel completely at their ease. Notable among the people beneath whose gaze I myself experience a sensation of extreme discomfort and guilt is Miss Julia Ukridge, author of so many widely-read novels and popular after-dinner speaker at the better class of literary reunion. This was the fourth time we had met, and on each of the previous occasions I had felt the same curious illusion of having just committed some particularly unsavoury crime and⁠—what is more⁠—of having done it with swollen hands, enlarged feet, and trousers bagging at the knee on a morning when I had omitted to shave.</p>
 			<p>I stood and gaped. Although she had no doubt made her entry by the simple process of inserting a latchkey in the front door and turning it, her abrupt appearance had on me the effect of a miracle.</p>
-			<p>“<abbr>Mr.</abbr> Corcoran!” she observed, without pleasure.</p>
+			<p>“<abbr epub:type="z3998:name-title">Mr.</abbr> Corcoran!” she observed, without pleasure.</p>
 			<p>“Er⁠—”</p>
 			<p>“What are you doing here?”</p>
 			<p>An inhospitable remark; but justified, perhaps, by the circumstances of our previous relations⁠—which had not been of the most agreeable.</p>
@@ -148,7 +148,7 @@
 			<p>“Oh, by the way,” I said. “It nearly slipped my mind. The⁠—er⁠—the man in charge of all this business told me he particularly wanted to see you directly you came back.”</p>
 			<p>“What do you mean by the man in charge of all this business?”</p>
 			<p>“The fellow who got up the bazaar, you know.”</p>
-			<p>“Do you mean <abbr>Mr.</abbr> Sims, the president of the Temperance League?”</p>
+			<p>“Do you mean <abbr epub:type="z3998:name-title">Mr.</abbr> Sims, the president of the Temperance League?”</p>
 			<p>“That’s right. He told me he wanted to see you.”</p>
 			<p>“How could he possibly know that I should be coming back?”</p>
 			<p>“Oh, in case you did, I mean.” I had what Ukridge would have called an inspiration from above. “I think he wants you to say a few words.”</p>
@@ -159,10 +159,10 @@
 			<p>The disappearance of the curate puzzled me for a moment. He was rather an insignificant little man, but not so insignificant that I would not have noticed him if he had passed me while I was standing at the front door. And then I saw that the french windows were open.</p>
 			<p>It seemed to me that there was nothing to keep me. The strong distaste for this house which I had never lost since my first entry into it had been growing, and now the great open spaces called to me with an imperious voice. I turned softly, and found my hostess standing in the doorway.</p>
 			<p>“Oh, ah!” I said; and once more was afflicted by that curious sensation of having swelled in a very loathsome manner about the hands and feet. I have observed my hands from time to time during my life and have never been struck by anything particularly hideous about them: but whenever I encounter Miss Julia Ukridge they invariably take on the appearance and proportions of uncooked hams.</p>
-			<p>“Did you tell me, <abbr>Mr.</abbr> Corcoran,” said the woman in that quiet, purring voice which must lose her so many friends, not only in Wimbledon but in the larger world outside, “that you saw <abbr>Mr.</abbr> Sims and he said that he wished to speak to me?”</p>
+			<p>“Did you tell me, <abbr epub:type="z3998:name-title">Mr.</abbr> Corcoran,” said the woman in that quiet, purring voice which must lose her so many friends, not only in Wimbledon but in the larger world outside, “that you saw <abbr epub:type="z3998:name-title">Mr.</abbr> Sims and he said that he wished to speak to me?”</p>
 			<p>“That’s right.”</p>
-			<p>“Curious,” said Miss Ukridge. “I find that <abbr>Mr.</abbr> Sims is confined to his bed with a chill and has not been here today.”</p>
-			<p>I could sympathize with <abbr>Mr.</abbr> Sims’s chills. I felt as if I had caught one myself. I would⁠—possibly⁠—have made some reply, but at this moment an enormous snore proceeded from the armchair behind me, and such was my overwrought condition that I leaped like a young ram.</p>
+			<p>“Curious,” said Miss Ukridge. “I find that <abbr epub:type="z3998:name-title">Mr.</abbr> Sims is confined to his bed with a chill and has not been here today.”</p>
+			<p>I could sympathize with <abbr epub:type="z3998:name-title">Mr.</abbr> Sims’s chills. I felt as if I had caught one myself. I would⁠—possibly⁠—have made some reply, but at this moment an enormous snore proceeded from the armchair behind me, and such was my overwrought condition that I leaped like a young ram.</p>
 			<p>“Stanley!” cried Miss Ukridge, sighting the chair.</p>
 			<p>Another snore rumbled through the air, competing with the music of the merry-go-round. Miss Ukridge advanced and shook her nephew’s arm.</p>
 			<p>“I think,” I said, being in the frame of mind when one does say silly things of that sort, “I think he’s asleep.”</p>
@@ -184,23 +184,23 @@
 			<p>“What yard?” asked the lady of the house, who, it seemed, did not read detective stories.</p>
 			<p>“Scotland Yard.”</p>
 			<p>“Oh!”</p>
-			<p>“I have come to warn you, Miss Ukridge,” said <abbr>Mr.</abbr> Dawson, looking at me as if I were a bloodstain, “to be on your guard. One of the greatest rascals in the profession is hanging about your grounds.”</p>
+			<p>“I have come to warn you, Miss Ukridge,” said <abbr epub:type="z3998:name-title">Mr.</abbr> Dawson, looking at me as if I were a bloodstain, “to be on your guard. One of the greatest rascals in the profession is hanging about your grounds.”</p>
 			<p>“Then why don’t you arrest him?” demanded Miss Ukridge. The visitor smiled faintly.</p>
 			<p>“Because I want to get him good,” he said.</p>
 			<p>“Get him good? Do you mean reform him?”</p>
-			<p>“I do not mean reform him,” said <abbr>Mr.</abbr> Dawson, grimly. “I mean that I want to catch him trying on something worth pulling him in for. There’s no sense in taking a man like Stuttering Sam for being a suspected person.”</p>
-			<p>“Stuttering Sam!” I cried, and <abbr>Mr.</abbr> Dawson eyed me keenly once more, this time almost as intently as if I had been the blunt instrument with which the murder was committed.</p>
+			<p>“I do not mean reform him,” said <abbr epub:type="z3998:name-title">Mr.</abbr> Dawson, grimly. “I mean that I want to catch him trying on something worth pulling him in for. There’s no sense in taking a man like Stuttering Sam for being a suspected person.”</p>
+			<p>“Stuttering Sam!” I cried, and <abbr epub:type="z3998:name-title">Mr.</abbr> Dawson eyed me keenly once more, this time almost as intently as if I had been the blunt instrument with which the murder was committed.</p>
 			<p>“Eh?” he said.</p>
 			<p>“Oh, nothing. Only it’s curious⁠—”</p>
 			<p>“What’s curious?”</p>
 			<p>“Oh, no, it couldn’t be. This fellow was a curate. A most respectable man.”</p>
-			<p>“Have you seen a curate who stuttered?” exclaimed <abbr>Mr.</abbr> Dawson.</p>
+			<p>“Have you seen a curate who stuttered?” exclaimed <abbr epub:type="z3998:name-title">Mr.</abbr> Dawson.</p>
 			<p>“Why, yes. He⁠—”</p>
-			<p>“Hullo!” said <abbr>Mr.</abbr> Dawson. “Who’s this?”</p>
+			<p>“Hullo!” said <abbr epub:type="z3998:name-title">Mr.</abbr> Dawson. “Who’s this?”</p>
 			<p>“That,” replied Miss Ukridge, eyeing the armchair with loathing, “is my nephew Stanley.”</p>
 			<p>“Sound sleeper.”</p>
 			<p>“I prefer not to talk about him.”</p>
-			<p>“Tell me about this curate,” said <abbr>Mr.</abbr> Dawson, brusquely.</p>
+			<p>“Tell me about this curate,” said <abbr epub:type="z3998:name-title">Mr.</abbr> Dawson, brusquely.</p>
 			<p>“Well, he came in⁠—”</p>
 			<p>“Came in? In here?”</p>
 			<p>“Yes.”</p>
@@ -215,20 +215,20 @@
 			<p>“In the drawing-room.”</p>
 			<p>“Take me there, if you please.”</p>
 			<p>“But I don’t understand.”</p>
-			<p><abbr>Mr.</abbr> Dawson clicked his tongue in an annoyed manner. He seemed to be an irritable sleuthhound.</p>
+			<p><abbr epub:type="z3998:name-title">Mr.</abbr> Dawson clicked his tongue in an annoyed manner. He seemed to be an irritable sleuthhound.</p>
 			<p>“I should have thought the thing was clear enough by this time. This man worms his way into your house with a plausible story, gets rid of this gentleman here⁠—How did he get rid of you?”</p>
 			<p>“Oh, I just went, you know. I thought I would like a stroll.”</p>
 			<p>“Oh? Well, having contrived to be alone with your nephew, Miss Ukridge, he slips knockout drops in his drink⁠—”</p>
 			<p>“Knockout drops?”</p>
-			<p>“A drug of some kind,” explained <abbr>Mr.</abbr> Dawson, chafing at her slowness of intelligence.</p>
+			<p>“A drug of some kind,” explained <abbr epub:type="z3998:name-title">Mr.</abbr> Dawson, chafing at her slowness of intelligence.</p>
 			<p>“But the man was a curate!”</p>
-			<p><abbr>Mr.</abbr> Dawson barked shortly.</p>
+			<p><abbr epub:type="z3998:name-title">Mr.</abbr> Dawson barked shortly.</p>
 			<p>“Posing as a curate is the thing Stuttering Sam does best. He works the races in that character. Is this the drawing-room?”</p>
 			<p>It was. And it did not need the sharp, agonized cry which proceeded from its owner’s lips to tell us that the worst had happened. The floor was covered with splintered wood and broken glass.</p>
 			<p>“They’re gone!” cried Miss Ukridge.</p>
-			<p>It is curious how differently the same phenomenon can strike different people. Miss Ukridge was a frozen statue of grief. <abbr>Mr.</abbr> Dawson, on the other hand, seemed pleased. He stroked his short moustache with an air of indulgent complacency, and spoke of neat jobs. He described Stuttering Sam as a Tough Baby, and gave it as his opinion that the absent one might justly be considered one of the lads and not the worst of them.</p>
+			<p>It is curious how differently the same phenomenon can strike different people. Miss Ukridge was a frozen statue of grief. <abbr epub:type="z3998:name-title">Mr.</abbr> Dawson, on the other hand, seemed pleased. He stroked his short moustache with an air of indulgent complacency, and spoke of neat jobs. He described Stuttering Sam as a Tough Baby, and gave it as his opinion that the absent one might justly be considered one of the lads and not the worst of them.</p>
 			<p>“What shall I do?” wailed Miss Ukridge. I was sorry for the woman. I did not like her, but she was suffering.</p>
-			<p>“The first thing to do,” said <abbr>Mr.</abbr> Dawson, briskly, “is to find out how much the fellow has got away with. Have you any other valuables in the house?”</p>
+			<p>“The first thing to do,” said <abbr epub:type="z3998:name-title">Mr.</abbr> Dawson, briskly, “is to find out how much the fellow has got away with. Have you any other valuables in the house?”</p>
 			<p>“My jewels are in my bedroom.”</p>
 			<p>“Where?”</p>
 			<p>“I keep them in a box in the dress-cupboard.”</p>
@@ -237,7 +237,7 @@
 			<p>“Well, see if there is anything else missing. Where is your bedroom?”</p>
 			<p>“On the first floor, facing the front.”</p>
 			<p>“Right.”</p>
-			<p><abbr>Mr.</abbr> Dawson, all briskness and efficiency, left us. I was sorry to see him go. I had an idea that it would not be pleasant being left alone with this bereaved woman. Nor was it.</p>
+			<p><abbr epub:type="z3998:name-title">Mr.</abbr> Dawson, all briskness and efficiency, left us. I was sorry to see him go. I had an idea that it would not be pleasant being left alone with this bereaved woman. Nor was it.</p>
 			<p>“Why on earth,” said Miss Ukridge, rounding on me as if I had been a relation, “did you not suspect this man when he came in?”</p>
 			<p>“Why, I⁠—he⁠—”</p>
 			<p>“A child ought to have been able to tell that he was not a real curate.”</p>
@@ -252,7 +252,7 @@
 			<p>“Tchah!” said Miss Ukridge, swooping down. One of the rooted convictions of each member of the human race is that he or she is able without difficulty to open a door which has baffled their fellows. She took the handle and gave it a vigorous tug. The door creaked but remained unresponsive.</p>
 			<p>“What’s the matter with the thing?” exclaimed Miss Ukridge, petulantly.</p>
 			<p>“It’s stuck.”</p>
-			<p>“I know it has stuck. Please do something at once. Good gracious, <abbr>Mr.</abbr> Corcoran, surely you are at least able to open a drawing-room door?”</p>
+			<p>“I know it has stuck. Please do something at once. Good gracious, <abbr epub:type="z3998:name-title">Mr.</abbr> Corcoran, surely you are at least able to open a drawing-room door?”</p>
 			<p>It seemed, put in that tone of voice, a feat sufficiently modest for a man of good physique and fair general education; but I was reluctantly compelled to confess, after a few more experiments, that it was beyond my powers. This appeared to confirm my hostess in the opinion, long held by her, that I was about the most miserable worm that an inscrutable Providence had ever permitted to enter the world.</p>
 			<p>She did not actually say as much, but she sniffed, and I interpreted her meaning exactly.</p>
 			<p>“Ring the bell!”</p>
@@ -311,8 +311,8 @@
 			<p>“Are you there?” said a grave voice in answer to my ring.</p>
 			<p>“Is that Barter?”</p>
 			<p>“Yes, sir.”</p>
-			<p>“This is <abbr>Mr.</abbr> Corcoran. I want to speak to <abbr>Mr.</abbr> Ukridge.”</p>
-			<p>“<abbr>Mr.</abbr> Ukridge is no longer here, sir. He left perhaps an hour ago.”</p>
+			<p>“This is <abbr epub:type="z3998:name-title">Mr.</abbr> Corcoran. I want to speak to <abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge.”</p>
+			<p>“<abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge is no longer here, sir. He left perhaps an hour ago.”</p>
 			<p>“Oh? Do you mean left⁠—er⁠—forever?”</p>
 			<p>“Yes, sir.”</p>
 			<p>“Oh! Thanks.”</p>
