--- a/src/epub/text/ukridges-dog-college.xhtml
+++ b/src/epub/text/ukridges-dog-college.xhtml
@@ -44,7 +44,7 @@
 			<p>One afternoon, as I let myself into the house in Ebury Street of which I rented at that time the bedroom and sitting room on the first floor, I came upon Bowles, my landlord, standing in listening attitude at the foot of the stairs.</p>
 			<p>“Good afternoon, sir,” said Bowles. “A gentleman is waiting to see you. I fancy I heard him calling me a moment ago.”</p>
 			<p>“Who is he?”</p>
-			<p>“A <abbr>Mr.</abbr> Ukridge, sir. He⁠—”</p>
+			<p>“A <abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge, sir. He⁠—”</p>
 			<p>A vast voice boomed out from above.</p>
 			<p>“Bowles, old horse!”</p>
 			<p>Bowles, like all other proprietors of furnished apartments in the southwestern district of London, was an ex-butler, and about him, as about all ex-butlers, there clung like a garment an aura of dignified superiority which had never failed to crush my spirit. He was a man of portly aspect, with a bald head and prominent eyes of a lightish green⁠—eyes that seemed to weigh me dispassionately and find me wanting. “H’m!” they seemed to say. “Young⁠—very young. And not at all what I have been accustomed to in the best places.” To hear this dignitary addressed⁠—and in a shout at that⁠—as “old horse” affected me with much the same sense of imminent chaos as would afflict a devout young curate if he saw his bishop slapped on the back. The shock, therefore, when he responded not merely mildly but with what almost amounted to camaraderie was numbing.</p>
@@ -134,24 +134,24 @@
 			<p>“I want to scatter ’em about on the table in front of this Nickerson blighter.”</p>
 			<p>“Is this where he lives?”</p>
 			<p>We had come to a red-roofed house, set back from the road amidst trees. Ukridge wielded the knocker forcefully.</p>
-			<p>“Tell <abbr>Mr.</abbr> Nickerson,” he said to the maid, “that <abbr>Mr.</abbr> Ukridge has called and would like a word.”</p>
-			<p>About the demeanour of the man who presently entered the room into which we had been shown there was that subtle but well-marked something which stamps your creditor all the world over. <abbr>Mr.</abbr> Nickerson was a man of medium height, almost completely surrounded by whiskers, and through the shrubbery he gazed at Ukridge with frozen eyes, shooting out waves of deleterious animal magnetism. You could see at a glance that he was not fond of Ukridge. Take him for all in all, <abbr>Mr.</abbr> Nickerson looked like one of the less amiable prophets of the Old Testament about to interview the captive monarch of the Amalekites.</p>
+			<p>“Tell <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson,” he said to the maid, “that <abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge has called and would like a word.”</p>
+			<p>About the demeanour of the man who presently entered the room into which we had been shown there was that subtle but well-marked something which stamps your creditor all the world over. <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson was a man of medium height, almost completely surrounded by whiskers, and through the shrubbery he gazed at Ukridge with frozen eyes, shooting out waves of deleterious animal magnetism. You could see at a glance that he was not fond of Ukridge. Take him for all in all, <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson looked like one of the less amiable prophets of the Old Testament about to interview the captive monarch of the Amalekites.</p>
 			<p>“Well?” he said, and I have never heard the word spoken in a more forbidding manner.</p>
 			<p>“I’ve come about the rent.”</p>
-			<p>“Ah!” said <abbr>Mr.</abbr> Nickerson, guardedly.</p>
+			<p>“Ah!” said <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson, guardedly.</p>
 			<p>“To pay it,” said Ukridge.</p>
-			<p>“To pay it!” ejaculated <abbr>Mr.</abbr> Nickerson, incredulously.</p>
+			<p>“To pay it!” ejaculated <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson, incredulously.</p>
 			<p>“Here!” said Ukridge, and with a superb gesture flung money on the table.</p>
-			<p>I understood now why the massive-minded man had wanted small notes. They made a brave display. There was a light breeze blowing in through the open window, and so musical a rustling did it set up as it played about the heaped-up wealth that <abbr>Mr.</abbr> Nickerson’s austerity seemed to vanish like breath off a razor-blade. For a moment a dazed look came into his eyes and he swayed slightly; then, as he started to gather up the money, he took on the benevolent air of a bishop blessing pilgrims. As far as <abbr>Mr.</abbr> Nickerson was concerned, the sun was up.</p>
-			<p>“Why, thank you, <abbr>Mr.</abbr> Ukridge, I’m sure,” he said. “Thank you very much. No hard feelings, I trust?”</p>
+			<p>I understood now why the massive-minded man had wanted small notes. They made a brave display. There was a light breeze blowing in through the open window, and so musical a rustling did it set up as it played about the heaped-up wealth that <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson’s austerity seemed to vanish like breath off a razor-blade. For a moment a dazed look came into his eyes and he swayed slightly; then, as he started to gather up the money, he took on the benevolent air of a bishop blessing pilgrims. As far as <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson was concerned, the sun was up.</p>
+			<p>“Why, thank you, <abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge, I’m sure,” he said. “Thank you very much. No hard feelings, I trust?”</p>
 			<p>“Not on my side, old horse,” responded Ukridge, affably. “Business is business.”</p>
 			<p>“Exactly.”</p>
 			<p>“Well, I may as well take those dogs now,” said Ukridge, helping himself to a cigar from a box which he had just discovered on the mantelpiece and putting a couple more in his pocket in the friendliest way. “The sooner they’re back with me, the better. They’ve lost a day’s education as it is.”</p>
-			<p>“Why, certainly, <abbr>Mr.</abbr> Ukridge; certainly. They are in the shed at the bottom of the garden. I will get them for you at once.”</p>
+			<p>“Why, certainly, <abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge; certainly. They are in the shed at the bottom of the garden. I will get them for you at once.”</p>
 			<p>He retreated through the door, babbling ingratiatingly.</p>
 			<p>“Amazing how fond these blokes are of money,” sighed Ukridge. “It’s a thing I don’t like to see. Sordid, I call it. That blighter’s eyes were gleaming, positively gleaming, laddie, as he scooped up the stuff. Good cigars these,” he added, pocketing three more.</p>
-			<p>There was a faltering footstep outside, and <abbr>Mr.</abbr> Nickerson re-entered the room. The man appeared to have something on his mind. A glassy look was in his whisker-bordered eyes, and his mouth, though it was not easy to see it through the jungle, seemed to me to be sagging mournfully. He resembled a minor prophet who has been hit behind the ear with a stuffed eel-skin.</p>
-			<p>“<abbr>Mr.</abbr> Ukridge!”</p>
+			<p>There was a faltering footstep outside, and <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson re-entered the room. The man appeared to have something on his mind. A glassy look was in his whisker-bordered eyes, and his mouth, though it was not easy to see it through the jungle, seemed to me to be sagging mournfully. He resembled a minor prophet who has been hit behind the ear with a stuffed eel-skin.</p>
+			<p>“<abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge!”</p>
 			<p>“Hallo?”</p>
 			<p>“The⁠—the little dogs!”</p>
 			<p>“Well?”</p>
@@ -166,15 +166,15 @@
 			<p>“Upon my Sam!”</p>
 			<p>“I am extremely sorry⁠—”</p>
 			<p>“Upon my Sam!” cried Ukridge. “It’s hard. It’s pretty hard. I come down here to inaugurate a great business, which would eventually have brought trade and prosperity to the whole neighbourhood, and I have hardly had time to turn round and attend to the preliminary details of the enterprise when this man comes and sneaks my dogs. And now he tells me with a light laugh⁠—”</p>
-			<p>“<abbr>Mr.</abbr> Ukridge, I assure you⁠—”</p>
+			<p>“<abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge, I assure you⁠—”</p>
 			<p>“Tells me with a light laugh that they’ve gone. Gone! Gone where? Why, dash it, they may be all over the county. A fat chance I’ve got of ever seeing them again. Six valuable Pekingese, already educated practically to the stage where they could have been sold at an enormous profit⁠—”</p>
-			<p><abbr>Mr.</abbr> Nickerson was fumbling guiltily, and now he produced from his pocket a crumpled wad of notes, which he thrust agitatedly upon Ukridge, who waved them away with loathing.</p>
+			<p><abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson was fumbling guiltily, and now he produced from his pocket a crumpled wad of notes, which he thrust agitatedly upon Ukridge, who waved them away with loathing.</p>
 			<p>“This gentleman,” boomed Ukridge, indicating me with a sweeping gesture, “happens to be a lawyer. It is extremely lucky that he chanced to come down today to pay me a visit. Have you followed the proceedings closely?”</p>
 			<p>I said I had followed them very closely.</p>
 			<p>“Is it your opinion that an action will lie?”</p>
-			<p>I said it seemed highly probable, and this expert ruling appeared to put the final touch on <abbr>Mr.</abbr> Nickerson’s collapse. Almost tearfully he urged the notes on Ukridge.</p>
+			<p>I said it seemed highly probable, and this expert ruling appeared to put the final touch on <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson’s collapse. Almost tearfully he urged the notes on Ukridge.</p>
 			<p>“What’s this?” said Ukridge, loftily.</p>
-			<p>“I⁠—I thought, <abbr>Mr.</abbr> Ukridge, that, if it were agreeable to you, you might consent to take your money back, and⁠—and consider the episode closed.”</p>
+			<p>“I⁠—I thought, <abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge, that, if it were agreeable to you, you might consent to take your money back, and⁠—and consider the episode closed.”</p>
 			<p>Ukridge turned to me with raised eyebrows.</p>
 			<p>“Ha!” he cried. “Ha, ha!”</p>
 			<p>“Ha, ha!” I chorused, dutifully.</p>
@@ -182,8 +182,8 @@
 			<p>“Fruity,” I agreed.</p>
 			<p>“Those dogs were worth hundreds of pounds, and he thinks he can square me with a rotten twenty. Would you have believed it if you hadn’t heard it with your own ears, old horse?”</p>
 			<p>“Never!”</p>
-			<p>“I’ll tell you what I’ll do,” said Ukridge, after thought. “I’ll take this money.” <abbr>Mr.</abbr> Nickerson thanked him. “And there are one or two trifling accounts which want settling with some of the local tradesmen. You will square those⁠—”</p>
-			<p>“Certainly, <abbr>Mr.</abbr> Ukridge, certainly.”</p>
+			<p>“I’ll tell you what I’ll do,” said Ukridge, after thought. “I’ll take this money.” <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson thanked him. “And there are one or two trifling accounts which want settling with some of the local tradesmen. You will square those⁠—”</p>
+			<p>“Certainly, <abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge, certainly.”</p>
 			<p>“And after that⁠—well, I’ll have to think it over. If I decide to institute proceedings my lawyer will communicate with you in due course.”</p>
 			<p>And we left the wretched man, cowering despicably behind his whiskers.</p>
 			<p>It seemed to me, as we passed down the tree-shaded lane and out into the white glare of the road, that Ukridge was bearing himself in his hour of disaster with a rather admirable fortitude. His stock-in-trade, the lifeblood of his enterprise, was scattered all over Kent, probably never to return, and all that he had to show on the other side of the balance-sheet was the cancelling of a few weeks’ back rent and the paying-off of Gooch, the grocer, and his friends. It was a situation which might well have crushed the spirit of an ordinary man, but Ukridge seemed by no means dejected. Jaunty, rather. His eyes shone behind their pince-nez and he whistled a rollicking air. When presently he began to sing, I felt that it was time to create a diversion.</p>
@@ -210,7 +210,7 @@
 			<p>“I promised him I wouldn’t mention it,” I said, “for fear it might lead to disappointment, but as a matter of fact George Tupper is trying to raise some capital for you. I left him last night starting out to get it.”</p>
 			<p>“George Tupper!”⁠—Ukridge’s eyes dimmed with a not unmanly emotion⁠—“George Tupper! By Gad, that fellow is the salt of the earth. Good, loyal fellow! A true friend. A man you can rely on. Upon my Sam, if there were more fellows about like old Tuppy, there wouldn’t be all this modern pessimism and unrest. Did he seem to have any idea where he could raise a bit of capital for me?”</p>
 			<p>“Yes. He went round to tell your aunt about your coming down here to train those Pekes, and⁠—What’s the matter?”</p>
-			<p>A fearful change had come over Ukridge’s jubilant front. His eyes bulged, his jaw sagged. With the addition of a few feet of grey whiskers he would have looked exactly like the recent <abbr>Mr.</abbr> Nickerson.</p>
+			<p>A fearful change had come over Ukridge’s jubilant front. His eyes bulged, his jaw sagged. With the addition of a few feet of grey whiskers he would have looked exactly like the recent <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson.</p>
 			<p>“My aunt?” he mumbled, swaying on the door-handle.</p>
 			<p>“Yes. What’s the matter? He thought, if he told her all about it, she might relent and rally round.”</p>
 			<p>The sigh of a gallant fighter at the end of his strength forced its way up from Ukridge’s mackintosh-covered bosom.</p>
