Fix typo fit->lit.

--- a/src/epub/text/ukridge-rounds-a-nasty-corner.xhtml
+++ b/src/epub/text/ukridge-rounds-a-nasty-corner.xhtml
@@ -114,7 +114,7 @@
 			<p>“My aunt asked me to give you these,” she said. “They are Uncle Rupert’s letters home for the year 1889.”</p>
 			<p>I looked at her with interest and something bordering on awe. This was the girl who had actually committed herself to the appalling task of going through life as <abbr epub:type="z3998:name-title">Mrs.</abbr> Stanley Featherstonehaugh Ukridge⁠—and, what is more, seemed to like the prospect. Of such stuff are heroines made.</p>
 			<p>“Thank you,” I said, putting the papers on the desk. “By the way, may I⁠—I hope you will⁠—What I mean is, Ukridge told me all about it. I hope you will be very happy.”</p>
-			<p>Her face fit up. She really was the most delightful girl to look at I had ever met. I could not blame Ukridge for falling in love with her.</p>
+			<p>Her face lit up. She really was the most delightful girl to look at I had ever met. I could not blame Ukridge for falling in love with her.</p>
 			<p>“Thank you very much,” she said. She sat in the huge armchair, looking very small. “Stanley has been telling me what friends you and he are. He is devoted to you.”</p>
 			<p>“Great chap!” I said, heartily. I would have said anything which I thought would please her. She exercised a spell, this girl. “We were at school together.”</p>
 			<p>“I know. He is always talking about it.” She looked at me with round eyes exactly like a Persian kitten’s. “I suppose you will be his best man?” She bubbled with happy laughter. “At one time I was awfully afraid there wouldn’t be any need for a best man. Do you think it was very wrong of us to steal Aunt Elizabeth’s parrot?”</p>
