[Editorial] re-enter -> reenter

--- a/src/epub/text/ukridges-dog-college.xhtml
+++ b/src/epub/text/ukridges-dog-college.xhtml
@@ -150,7 +150,7 @@
 			<p>“Why, certainly, <abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge; certainly. They are in the shed at the bottom of the garden. I will get them for you at once.”</p>
 			<p>He retreated through the door, babbling ingratiatingly.</p>
 			<p>“Amazing how fond these blokes are of money,” sighed Ukridge. “It’s a thing I don’t like to see. Sordid, I call it. That blighter’s eyes were gleaming, positively gleaming, laddie, as he scooped up the stuff. Good cigars these,” he added, pocketing three more.</p>
-			<p>There was a faltering footstep outside, and <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson re-entered the room. The man appeared to have something on his mind. A glassy look was in his whisker-bordered eyes, and his mouth, though it was not easy to see it through the jungle, seemed to me to be sagging mournfully. He resembled a minor prophet who has been hit behind the ear with a stuffed eel-skin.</p>
+			<p>There was a faltering footstep outside, and <abbr epub:type="z3998:name-title">Mr.</abbr> Nickerson reentered the room. The man appeared to have something on his mind. A glassy look was in his whisker-bordered eyes, and his mouth, though it was not easy to see it through the jungle, seemed to me to be sagging mournfully. He resembled a minor prophet who has been hit behind the ear with a stuffed eel-skin.</p>
 			<p>“<abbr epub:type="z3998:name-title">Mr.</abbr> Ukridge!”</p>
 			<p>“Hallo?”</p>
 			<p>“The⁠—the little dogs!”</p>
