Add telegram styling

--- a/src/epub/text/ukridges-dog-college.xhtml
+++ b/src/epub/text/ukridges-dog-college.xhtml
@@ -80,7 +80,7 @@
 			<p>“All right. Have it your own way. Only don’t forget that there was a fellow who put nine hundred dollars into the Ford Car business when it was starting and he collected a cool forty million. I say, is that clock right? Great Scott! I’ll be missing my train. Help me mobilise these dashed animals.”</p>
 			<p>Five minutes later, accompanied by the six Pekingese and bearing about him a pound of my tobacco, three pairs of my socks, and the remains of a bottle of whisky, Ukridge departed in a taxicab for Charing Cross Station to begin his lifework.</p>
 			<p>Perhaps six weeks passed, six quiet Ukridgeless weeks, and then one morning I received an agitated telegram. Indeed, it was not so much a telegram as a cry of anguish. In every word of it there breathed the tortured spirit of a great man who has battled in vain against overwhelming odds. It was the sort of telegram which Job might have sent off after a lengthy session with Bildad the Shuhite:⁠—</p>
-			<blockquote>
+			<blockquote class="telegram" epub:type="z3998:letter">
 				<p>“Come here immediately, laddie. Life and death matter, old horse. Desperate situation. Don’t fail me.”</p>
 			</blockquote>
 			<p>It stirred me like a bugle, I caught the next train.</p>
