Add 'role="presentation"' to headers and footers in blockquotes

--- a/src/epub/text/the-debut-of-battling-billson.xhtml
+++ b/src/epub/text/the-debut-of-battling-billson.xhtml
@@ -201,7 +201,7 @@
 				<p epub:type="z3998:salutation">“Wilberforce⁠—</p>
 				<p>“I take my pen in hand to tell you that I can never be yours. You will no doubt be surprised to hear that I love another and a better man, so that it can never be. He loves me, and he is a better man than you.</p>
 				<p>“Hoping this finds you in the pink as it leaves me at present,</p>
-				<footer>
+				<footer role="presentation">
 					<p epub:type="z3998:valediction">“Yours faithfully,</p>
 					<p epub:type="z3998:signature z3998:sender">“Florence Burns.”</p>
 				</footer>
