--- a/src/epub/text/the-return-of-battling-billson.xhtml
+++ b/src/epub/text/the-return-of-battling-billson.xhtml
@@ -76,7 +76,7 @@
 				<p>“It’s not often I ask you to do anything for me, laddie, but I beg and implore you to rally round now and show yourself the true friend I know you are. The one thing I’ve always said about you, Corky my boy, is that you’re a real pal who never lets a fellow down.</p>
 				<p>“The bearer of this⁠—a delightful woman, you’ll like her⁠—is Flossie’s mother. She’s up for the day by excursion from the North, and it is absolutely vital that she be lushed up and seen off at Euston at six-forty-five. I can’t look after her myself, as unfortunately I’m laid up with a sprained ankle. Otherwise I wouldn’t trouble you.</p>
 				<p>“This is a life and death matter, old man, and I’m relying on you. I can’t possibly tell you how important it is that this old bird should be suitably entertained. The gravest issues hang on it. So shove on your hat and go to it, laddie, and blessings will reward you. Tell you all the details when we meet.</p>
-				<footer>
+				<footer role="presentation">
 					<p epub:type="z3998:valediction">“Yours ever,</p>
 					<p epub:type="z3998:signature z3998:sender">“<abbr epub:type="z3998:given-name">S. F.</abbr> Ukridge.</p>
 					<p epub:type="z3998:postscript">“<abbr epub:type="z3998:initialism">P.S.</abbr>⁠—I will defray all expenses later.”</p>
