[Editorial] Correct hyphenation of several words

--- a/src/epub/text/no-wedding-bells-for-him.xhtml
+++ b/src/epub/text/no-wedding-bells-for-him.xhtml
@@ -256,7 +256,7 @@
 			<p>“I’m afraid I have serious news, old man,” I said, in a hushed voice.</p>
 			<p>“Serious news?” said Ukridge, trying to turn pale.</p>
 			<p>“Serious news!”</p>
-			<p>I had warned him during rehearsals that this was going to sound uncommonly like a vaudeville crosstalk act of the Argumentative College Chums type, but he had ruled out the objection as farfetched. Nevertheless, that is just what it did sound like, and I found myself blushing warmly.</p>
+			<p>I had warned him during rehearsals that this was going to sound uncommonly like a vaudeville crosstalk act of the Argumentative College Chums type, but he had ruled out the objection as far-fetched. Nevertheless, that is just what it did sound like, and I found myself blushing warmly.</p>
 			<p>“What is it?” demanded Ukridge, emotionally, clutching me by the arm in a grip like the bite of a horse.</p>
 			<p>“Ouch!” I cried. “Your aunt!”</p>
 			<p>“My aunt?”</p>
