--- a/src/epub/text/uckridge-and-the-old-stepper.xhtml
+++ b/src/epub/text/uckridge-and-the-old-stepper.xhtml
@@ -30,7 +30,7 @@
 			<p>“If you think that after pinching my spring suiting you’re going to get so much as a crust of bread⁠—”</p>
 			<p>“Calm yourself, laddie. You’re lunching with me. Largely on the strength of this suit, I managed to get past the outer defenses of the Foreign Office just now and touch old George Tupper for a fiver. Joy will be unconfined.”</p>
 			<hr/>
-			<p>“CORKY,” said Ukridge, thoughtfully spreading caviar on a piece of toast in the Regent Grillroom some ten minutes later, “do you ever brood on what might have been?”</p>
+			<p>“Corky,” said Ukridge, thoughtfully spreading caviar on a piece of toast in the Regent Grillroom some ten minutes later, “do you ever brood on what might have been?”</p>
 			<p>“I’m doing it now. I might have been wearing that suit.”</p>
 			<p>“There is no need to go into that again,” said Ukridge with dignity. “I have explained that little misunderstanding⁠—explained it fully. What I mean is, do you ever brood on the inscrutable workings of Fate, and reflect how, but for this or that, you might have been⁠—well, that or this? For instance, but for the old Stepper I would by now be the mainstay of a vast business and in all probability happily married to a charming girl and the father of half a dozen prattling children.”</p>
 			<p>“In which case, if there is anything in heredity, I should have had to keep my spring suits in a safe deposit.”</p>
@@ -38,7 +38,7 @@
 			<p>“You were babbling about Fate.”</p>
 			<p>“Ah, yes.”</p>
 			<hr/>
-			<p>FATE [said Ukridge] is odd. Rummy. You can’t say it isn’t. Lots of people have noticed it. And one of the rummiest things about it is the way it seems to take a delight in patting you on the head and lulling you into security and then suddenly steering your foot on to the banana skin. Just when things appear to be going smoothest, bang! comes the spanner into the machinery, and there you are.</p>
+			<p>Fate [said Ukridge] is odd. Rummy. You can’t say it isn’t. Lots of people have noticed it. And one of the rummiest things about it is the way it seems to take a delight in patting you on the head and lulling you into security and then suddenly steering your foot on to the banana skin. Just when things appear to be going smoothest, bang! comes the spanner into the machinery, and there you are.</p>
 			<p>Take this business I’m going to tell you about. Just before it happened I had begun to look upon myself as fortune’s favorite child. Everything was breaking right in the most astounding fashion.</p>
 			<p>My Aunt Julia, having sailed for America on one of her lecturing tours, had lent me her cottage at Market Deeping in Sussex till her return, with instructions to the local tradesmen to let me have the necessaries of life and chalk them up to her. From some source which at the moment I cannot recollect I had snaffled two pairs of white flannel trousers and a tennis racket. And, finally, after a rather painful scene in the course of which I was compelled to allude to him as a pig-headed bureaucrat, I had contrived to get a couple of quid out of old Tuppy.</p>
 			<p>My position was solid. I ought to have known that luck like that couldn’t last.</p>
@@ -59,7 +59,7 @@
 			<p>The days flew by. The O. B. E. was chummy. The girl⁠—her name was Myrtle, and I think she had found life at Market Deeping a bit on the slow side till I arrived⁠—always seemed glad to see me. I was the petted neighbor.</p>
 			<p>And then, one afternoon, in walked the Stepper.</p>
 			<hr/>
-			<p>THERE have been occasions in my life, Corky, when, if I had seen a strange man with a white beard walking up the path to the front door of the house where I was living, I would have ducked through the back premises and remained concealed in the raspberry bushes till he had withdrawn. But it so happened that at this time my financial affairs were on a sound and solid basis and I hadn’t a single creditor in the world. So I went down and opened the door and found him beaming on the mat.</p>
+			<p>There have been occasions in my life, Corky, when, if I had seen a strange man with a white beard walking up the path to the front door of the house where I was living, I would have ducked through the back premises and remained concealed in the raspberry bushes till he had withdrawn. But it so happened that at this time my financial affairs were on a sound and solid basis and I hadn’t a single creditor in the world. So I went down and opened the door and found him beaming on the mat.</p>
 			<p>“Stanley Ukridge?” he said.</p>
 			<p>“Yes,” I said.</p>
 			<p>“I called at your aunt’s house at Wimbledon the other day, and they told me you were here. I’m your Uncle Percy from Australia, my boy. I married your late stepmother’s stepsister Alice.”</p>
@@ -89,7 +89,7 @@
 			<p>The Stepper had the right conception. Men arrived in vans and unloaded things with slanting backs and cushioned seats, and whenever I wasn’t over at the Hall I wallowed in these.</p>
 			<p>The Stepper wallowed in them all the time. Occasionally he put in an hour or so in the summerhouse⁠—for he had caused a summerhouse to appear at the bottom of the garden⁠—but mostly you would find him indoors with all the windows shut and something to drink at his elbow. He said he had had so much fresh air in Australia that what he wanted now was something he could scoop out with a spoon.</p>
 			<hr/>
-			<p>ONCE or twice I tried to get him over to the Hall, but he would have none of it. He said from what he knew of O. B. E.s he wouldn’t be allowed to take his boots off, and ran, moreover, a grave risk of being offered barley water. Apparently he had once met a teetotal O. B. E. in Sydney and was prejudiced.</p>
+			<p>Once or twice I tried to get him over to the Hall, but he would have none of it. He said from what he knew of O. B. E.s he wouldn’t be allowed to take his boots off, and ran, moreover, a grave risk of being offered barley water. Apparently he had once met a teetotal O. B. E. in Sydney and was prejudiced.</p>
 			<p>However, he was most sympathetic when I told him about Myrtle. He said that, though he wasn’t any too keen on matrimony as an institution, he was broad-minded enough to realize that there might quite possibly be women in the world unlike his late wife. Concerning whom he added that the rabbit was not, as had been generally stated, Australia’s worst pest.</p>
 			<p>“Tell me of this girl, my boy,” he said. “You squeeze her a good deal in dark corners, no doubt?”</p>
 			<p>“Certainly not,” I said stiffly.</p>
@@ -142,7 +142,7 @@
 			<p>And lastly, though the Stepper’s roses were present in wonderful profusion, he himself hadn’t shown up. And that seemed to me the biggest stroke of luck of the lot.</p>
 			<p>You see, the old Stepper wasn’t everybody’s money. To begin with, he had an apparently incurable dislike of O. B. E.s; and then, he combined with a hot-blooded and imperious nature the odd belief that eggs were a suitable food for adult human beings at 5 o’clock in the afternoon. And he was so touchy, too⁠—so ready to resent opposition. I had had visions of him standing over Sir Edward and shoving eggs down his throat at the point of a table knife. He was better away, and I hoped he had fallen into a ditch and couldn’t get out.</p>
 			<hr/>
-			<p>FROM the moment the first drop of tea was poured everything went as smooth as oil. In recent years, Corky, affairs have so shaped themselves that you have had the opportunity of seeing me mainly in the capacity of a guest; but you can take it from me that, vouchsafed the right conditions, I can be a very sparkling host. Give me a roof over my head, plenty of buttered toast, and no creditors in sight, and I shine with the best of them.</p>
+			<p>From the moment the first drop of tea was poured everything went as smooth as oil. In recent years, Corky, affairs have so shaped themselves that you have had the opportunity of seeing me mainly in the capacity of a guest; but you can take it from me that, vouchsafed the right conditions, I can be a very sparkling host. Give me a roof over my head, plenty of buttered toast, and no creditors in sight, and I shine with the best of them.</p>
 			<p>On the present occasion I was at the top of my form. I handed cups; I slid the toast about; I prattled merrily. And I could see the old boy was impressed. These O. B. E.s are silent, reserved men, and for a while he just looked at me from time to time in a meditative way. Then, as he was dipping into his third cup of tea, out he came into the open and began to talk turkey.</p>
 			<p>“Your aunt⁠—Have you heard from her, by the way?”</p>
 			<p>“Not yet. I suppose she’s very busy.”</p>
@@ -181,7 +181,7 @@
 			<p>“No doubt. Myrtle, my dear, I think we will be going.”</p>
 			<p>Then, Corky, I spread myself. On not a few occasions in a life that has had its ups and downs I have been compelled to do some impressive talking. But now I surpassed all previous efforts.</p>
 			<hr/>
-			<p>THE thought of all that was slipping away from me spurred me to heights I have never reached before or since. And gradually, little by little, I made headway.</p>
+			<p>The thought of all that was slipping away from me spurred me to heights I have never reached before or since. And gradually, little by little, I made headway.</p>
 			<p>The old boy tried to shake me off and edge through the French windows; but it is pretty hard to shake me off when I am at my best. I grabbed him by the buttonhole and steered him back into the room. And when, in a dazed sort of way, he reached out and took a slice of cake, I knew the battle was won.</p>
 			<p>“The way I look at it is this,” I said, getting between him and the window. “A man like my uncle would no doubt have a number of accounts in different banks. The one on which he drew this check happened to have insufficient funds in it, and the bank manager, with gross discourtesy⁠—”</p>
 			<p>“Well, yes, possibly.”</p>
@@ -242,7 +242,7 @@
 			<p>“Tell me all.”</p>
 			<p>I told him all.</p>
 			<hr/>
-			<p>“TOO bad!” he said. “I never have been able to shake off this habit of scrounging. Wherever Charles Percy Cuthbertson is, there he scrounges. But who would have supposed that people would make a fuss about a little thing like that? I’m disappointed in the old country. Why, nobody in Australia minds a little scrounging. What’s mine is yours and what’s yours is mine⁠—that’s our motto out there. All this to-do about a sundial and a summerhouse! Why, bless my soul, I’ve scrounged a tennis lawn in my time. Oh, well, there’s nothing to be done about it, I suppose.”</p>
+			<p>“Too bad!” he said. “I never have been able to shake off this habit of scrounging. Wherever Charles Percy Cuthbertson is, there he scrounges. But who would have supposed that people would make a fuss about a little thing like that? I’m disappointed in the old country. Why, nobody in Australia minds a little scrounging. What’s mine is yours and what’s yours is mine⁠—that’s our motto out there. All this to-do about a sundial and a summerhouse! Why, bless my soul, I’ve scrounged a tennis lawn in my time. Oh, well, there’s nothing to be done about it, I suppose.”</p>
 			<p>“There’s a lot to be done about it!” I said. “The O. B. E. doesn’t believe I’ve got an uncle. He thinks I pinched all those things myself.”</p>
 			<p>“Does he?” said the Stepper thoughtfully. “Does he, indeed?”</p>
 			<p>“And the least you can do is to go up to the Hall and explain.”</p>
